--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Ice Poseidon: The Unfiltered Streaming Saga</title>
     <meta name="description" content="The official territory of Ice Poseidon. Witness unfiltered live streams, high-octane casino gameplay, and the moments that define a streaming icon.">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://ice-poseidon.netlify.app/">
+    <link rel="canonical" href="https://the-ice-poseidon-slot.vercel.app/">
     <meta property="og:title" content="Ice Poseidon's Unfiltered Hub for Live Streams & Gaming">
     <meta property="og:description" content="Your direct link to the Ice Poseidon saga. From wild IRL journeys to intense casino sessions, experience the unfiltered action.">
-    <meta property="og:url" content="https://ice-poseidon.netlify.app/">
+    <meta property="og:url" content="https://the-ice-poseidon-slot.vercel.app/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ice Poseidon's Unfiltered Hub for Live Streams & Gaming">
